// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord begins streaming from the topic into a channel and returns it 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord begins streaming from the topic into a channel and returns it 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord begins streaming from the topic into a channel and returns it 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord uses the buffer provided if one is provided 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord uses the buffer provided if one is provided 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind PredicateRecord uses the buffer provided if one is provided 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a pattern of kind string begins streaming from the topic into a channel and returns it 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string begins streaming from the topic into a channel and returns it 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string begins streaming from the topic into a channel and returns it 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a pattern of kind string uses the buffer provided if one is provided 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string uses the buffer provided if one is provided 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string uses the buffer provided if one is provided 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] begins streaming from the topic into a channel and returns it 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-2",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] begins streaming from the topic into a channel and returns it 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
  Array [
    "test-topic-2",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] begins streaming from the topic into a channel and returns it 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] uses the buffer provided if one is provided 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-2",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] uses the buffer provided if one is provided 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
  Array [
    "test-topic-2",
  ],
]
`;

exports[`SagaRunner actionChannel given a pattern of kind string[] uses the buffer provided if one is provided 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_shorts",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;

exports[`SagaRunner actionChannel given a specific predicate only buffers actions that adhere to the predicate 1`] = `
Array [
  Array [
    Object {
      "observer": [Function],
      "topic": "test-topic-1",
      "transactionId": "static-transaction-id",
    },
  ],
]
`;

exports[`SagaRunner actionChannel given a specific predicate only buffers actions that adhere to the predicate 2`] = `
Array [
  Array [
    "test-topic-1",
  ],
]
`;

exports[`SagaRunner actionChannel given a specific predicate only buffers actions that adhere to the predicate 3`] = `
Object {
  "payload": Object {
    "bart_simpson": "eat_my_jeans",
  },
  "topic": "test-topic-1",
  "transaction_id": "static-transaction-id",
}
`;
